--- a/proj_cm7_0/Makefile
+++ b/proj_cm7_0/Makefile
@@ -7,7 +7,7 @@
 #
 ################################################################################
 # \copyright
-# Copyright 2022, Cypress Semiconductor Corporation (an Infineon company)
+# Copyright 2022-2024, Cypress Semiconductor Corporation (an Infineon company)
 # SPDX-License-Identifier: Apache-2.0
 # 
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -23,14 +23,15 @@
 # limitations under the License.
 ################################################################################
 
+include ../common.mk
+
 ################################################################################
 # Basic Configuration
 ################################################################################
 
-
 # Name of application (used to derive name of final linked file).
-# 
-# If APPNAME is edited, ensure to update or regenerate launch 
+#
+# If APPNAME is edited, ensure to update or regenerate launch
 # configurations for your IDE.
 APPNAME=proj_cm7_0
 
@@ -55,7 +56,7 @@ VERBOSE=
 COMPONENTS=
 
 # Like COMPONENTS, but disable optional code that was enabled by default.
-DISABLE_COMPONENTS+=XMC7xDUAL_CM0P_SLEEP
+DISABLE_COMPONENTS=XMC7xDUAL_CM0P_SLEEP XMC7x_CM0P_SLEEP CM0P_SLEEP
 
 # Set this application to run at the CM7_0
 CORE=CM7
@@ -102,7 +103,14 @@ LDFLAGS=
 LDLIBS=
 
 # Path to the linker script to use (if empty, use the default linker script).
-LINKER_SCRIPT=
+ifeq ($(TOOLCHAIN),GCC_ARM)
+    LINKER_SCRIPT_EXT:=ld
+else ifeq ($(TOOLCHAIN),ARM)
+    LINKER_SCRIPT_EXT:=sct
+else ifeq ($(TOOLCHAIN),IAR)
+    LINKER_SCRIPT_EXT:=icf
+endif
+LINKER_SCRIPT=$(MTB_TOOLS__TARGET_DIR)/COMPONENT_$(CORE)/TOOLCHAIN_$(TOOLCHAIN)/linker_d.$(LINKER_SCRIPT_EXT)
 
 # Custom pre-build commands to run.
 PREBUILD=
@@ -122,9 +130,9 @@ CY_APP_PATH=
 
 # Relative path to the shared repo location.
 #
-# All .mtb files have the format, <URI>#<COMMIT>#<LOCATION>. If the <LOCATION> field 
-# begins with $$ASSET_REPO$$, then the repo is deposited in the path specified by 
-# the CY_GETLIBS_SHARED_PATH variable. The default location is one directory level 
+# All .mtb files have the format, <URI>#<COMMIT>#<LOCATION>. If the <LOCATION> field
+# begins with $$ASSET_REPO$$, then the repo is deposited in the path specified by
+# the CY_GETLIBS_SHARED_PATH variable. The default location is one directory level
 # above the current app directory.
 # This is used with CY_GETLIBS_SHARED_NAME variable, which specifies the directory name.
 CY_GETLIBS_SHARED_PATH=../..
@@ -133,12 +141,13 @@ CY_GETLIBS_SHARED_PATH=../..
 #
 CY_GETLIBS_SHARED_NAME=mtb_shared
 
-# Absolute path to the compiler's "bin" directory.
+# Absolute path to the compiler's "bin" directory. The variable name depends on the
+# toolchain used for the build. Refer to the ModusToolbox user guide to get the correct
+# variable name for the toolchain used in your build.
 #
 # The default depends on the selected TOOLCHAIN (GCC_ARM uses the ModusToolbox
-# IDE provided compiler by default).
-CY_COMPILER_PATH=
+# software provided compiler by default).
+CY_COMPILER_GCC_ARM_DIR=
 
-include ../common.mk
 
 include $(CY_TOOLS_DIR)/make/start.mk
